--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,2 +1,11 @@
-<h1>Artists#show</h1>
-<p>Find me in app/views/artists/show.html.erb</p>
+<h1 class="page-header"><%= @artist.name %></h1>
+<% @artist.albums(country: 'US').each do |album| %>
+ <h3><%= album.name %></h3>
+ <ul>
+   <% album.tracks.each do |track| %>
+     <li>
+       <%= track.name %>
+     </li>
+   <% end %>
+ </ul>
+<% end %>
